# telos

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  project_spec.md  styles.css
src/: agent.js  api.js  app.js  chat.js  intentGraph.js  memory.js  naming.js  onboarding.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: agent.test.js  apiContracts.test.js  intentGraph.test.js  naming.test.js  onboarding.test.js
